Implemented template cloning Added the ability to move templates/reports/outputs to different folders Broke output display into completed vs. non-completed output tables Forcing regular expressions (visually) on parameter entry when available Rearranged the report editor to hopefully make a little more sense Fixed some other small bugs

--- a/Open-ILS/web/reports/oils_rpt.xhtml
+++ b/Open-ILS/web/reports/oils_rpt.xhtml
@@ -82,7 +82,7 @@
 						</div>
 					</td>
 
-					<td id='oils_rpt_folder_table_alt_td' class='hide_me'>
+					<td id='oils_rpt_folder_table_alt_td' class='hide_me' valign='top'>
 						<div class='oils_rpt_folder_window'>
 							<!--#include virtual="oils_rpt_editor.xhtml"-->
 						</div>
