--- a/Open-ILS/web/reports/oils_rpt_builder.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_builder.xhtml
@@ -21,6 +21,9 @@
 
 		<div>
 			<a class='oils_rpt_main_link' href='javascript:_l("oils_rpt.xhtml");'>Reports Home</a>
+			<span id='oils_rpt_builder_cloning' class='hide_me' style='padding-left: 10px;'>
+				(<b>Cloning template "<span id='oils_rpt_build_cloning_name'/>"</b>)
+			</span>
 		</div>
 
 		<div id='oils_rpt_tree_loading'>
@@ -80,7 +83,7 @@
 
 			<table id='oils_rpt_editor_tab_table' class='oils_rpt_tab_table'><tbody>
 				<tr>
-					<td width='25%'><a id='oils_rpt_tform_tab' href='javascript:void(0);'>Display Items</a></td>
+					<td width='25%' class='oils_rpt_tab_picker_selected'><a id='oils_rpt_tform_tab' href='javascript:void(0);'>Display Items</a></td>
 					<td width='25%'><a id='oils_rpt_filter_tab' href='javascript:void(0);'>Filters</a></td>
 					<td width='25%'><a id='oils_rpt_agg_filter_tab' href='javascript:void(0);'>Aggregate Filters</a></td>
 					<!--
