added setting for bounced emails

--- a/Open-ILS/xul/staff_client/server/admin/org_settings.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/org_settings.xhtml
@@ -65,14 +65,12 @@
 						<td><button id='cat.default_item_price.apply'>Apply</button></td>
 						<td><button id='cat.default_item_price.apply_all'>Apply to all Locations</button></td>
 					</tr>
-					<!--
 					<tr>
-						<td>Collections Fee</td>
-						<td>&#036;<input ismoney='1' type='text' id='circ.collections_fee' size='5'/></td>
-						<td><button id='circ.collections_fee.apply'>Apply</button></td>
-						<td><button id='circ.collections_fee.apply_all'>Apply to all Locations</button></td>
+						<td>Email address where failed (bounced) emails are returned</td>
+						<td><input type='text' id='org.bounced_emails' size='25'/></td>
+						<td><button id='org.bounced_emails.apply'>Apply</button></td>
+						<td><button id='org.bounced_emails.apply_all'>Apply to all Locations</button></td>
 					</tr>
-					-->
 				</tbody>
 			</table>
 			<br/>
