added unload handler to prevent navigating away when changes exist

--- a/Evergreen/xul/staff_client/server/patron/ue.xhtml
+++ b/Evergreen/xul/staff_client/server/patron/ue.xhtml
@@ -1003,6 +1003,10 @@
 			Are you sure you wish to perform this action?
 		</span>
 
+      <span class='hide_me' id='ue_unsaved_changes'>
+         You have unsaved changes. 
+      </span>
+
 	</div>
 
 	</body>
