--- a/Open-ILS/xul/staff_client/server/admin/org_settings.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/org_settings.xhtml
@@ -66,7 +66,7 @@
 						<td><button id='cat.default_item_price.apply_all'>Apply to all Locations</button></td>
 					</tr>
 					<tr>
-						<td>Email address where failed (bounced) emails are returned</td>
+						<td>"FROM" email address for patron notices<br/>(note: delivery failures will be returned this address)</td>
 						<td><input type='text' id='org.bounced_emails' size='25'/></td>
 						<td><button id='org.bounced_emails.apply'>Apply</button></td>
 						<td><button id='org.bounced_emails.apply_all'>Apply to all Locations</button></td>
