forward porting slimpac integration

--- a/Open-ILS/web/opac/extras/slimpac/start.html
+++ b/Open-ILS/web/opac/extras/slimpac/start.html
@@ -7,7 +7,7 @@
 				border: 3px solid #A7EA9D;
 				-moz-border-radius: 6px;
 				padding: 6px;
-				margin-top: 65px;'
+				margin-top: 65px;
 			}
 			
 			.greenrow {
@@ -96,6 +96,12 @@
 		<div style='width: 100%; text-align:center; vertical-align: bottom; margin-top: 20px;'>
 			<center>
 			<div style='width: 60%; text-align:center; padding: 10px; font-size: 8pt;'>
+
+				<span class='footer_link'>
+					<a class='classic_link' href='/'>Dynamic Catalog</a>
+				</span> 
+
+				<span> | </span>
 
 				<span class='footer_link'>
 					<a class='classic_link' href='advanced.html'>Advanced Search</a>
