added alert message for update successes

--- a/Open-ILS/xul/staff_client/server/admin/closed_dates.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/closed_dates.xhtml
@@ -221,6 +221,7 @@
 			<span class='hide_me' id='cd_confirm_delete'>Are you sure you wish to delete the selected close date?</span>
 			<span class='hide_me' id='cd_invalid_date'>Invalid date format</span>
 			<span class='hide_me' id='cd_invalid_time'>Invalid time format</span>
+			<span class='hide_me' id='cd_update_success'>Closed date successfully updated</span>
 		
 		</center>
 	</body>
