added collision detection to the user editor code to prevent overwiting changes

--- a/Evergreen/xul/staff_client/server/patron/ue.xhtml
+++ b/Evergreen/xul/staff_client/server/patron/ue.xhtml
@@ -1007,6 +1007,15 @@
          You have unsaved changes. 
       </span>
 
+        <span class='hide_me' id='ue_xact_collision'>
+            It appears that someone else was also editing this user.  Saving the user
+            now will destroy their changes.  Click "OK" to refresh the user and continue
+            editing.  Click "Cancel" to do nothing.
+    
+            Note that you will not be able to save the user until this page has been refreshed.
+        </span>
+
+
 	</div>
 
 	</body>
