xul_param and modal xulG conversion

--- a/Open-ILS/xul/staff_client/server/admin/upload_xacts.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/upload_xacts.xhtml
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" type="text/css" media="all" href="chrome://global/skin/" title="chrome_skin" />
 	<script type="text/javascript" src="/xul/server/main/JSAN.js"></script>
 	<script type="text/javascript" src="/xul/server/main/constants.js" />
+	<script type="text/javascript" src="/xul/server/OpenILS/global_util.js" />
 
 	<script type="text/javascript" src="/opac/common/js/utils.js" />
 	<script type="text/javascript" src="/opac/common/js/CGI.js" />
