added check for duplicate report-name-per-folder on report creation

--- a/Open-ILS/web/reports/oils_rpt_editor.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_editor.xhtml
@@ -215,4 +215,8 @@
 		Please fill in all fields.
 	</span>
 
+    <span id='oils_rpt_report_exists' class='hide_me'>
+        There is already a report in this folder with the given name.
+    </span>
+
 </div>
