--- a/Open-ILS/xul/staff_client/chrome/content/main/about.html
+++ b/Open-ILS/xul/staff_client/chrome/content/main/about.html
@@ -17,6 +17,7 @@ Evergreen calculates due dates and loan periods. It determines how many renewals
 <b>Jason Etheridge</b>, Interface Developer<br/>
 <b>Brad LaJeunesse</b>, System Administrator<br/>
 <b>Mike Rylander</b>, Database Developer<br/>
+<b>Dan Scott</b>, Developer<br/>
 </blockquote>
 <h2>The Website:</h2>
 <blockquote>
