--- a/Evergreen/xul/staff_client/server/patron/ue.xhtml
+++ b/Evergreen/xul/staff_client/server/patron/ue.xhtml
@@ -16,7 +16,7 @@
 		<script language='javascript' src='/opac/common/js/CGI.js'> </script>
 		<script language='javascript' src='/opac/common/js/Cookie.js'> </script>
 	
-		<script language='javascript' src='/opac/common/js/JSON.js'> </script>
+		<script language='javascript' src='/opac/common/js/JSON_v1.js'> </script>
 		<script language='javascript' src='/opac/common/js/fmall.js'> </script>
 		<script language='javascript' src='/opac/common/js/fmgen.js'> </script>
 		<script language='javascript' src='/opac/common/js/Cookies.js'> </script>
