--- a/Open-ILS/xul/staff_client/server/admin/printer_settings.html
+++ b/Open-ILS/xul/staff_client/server/admin/printer_settings.html
@@ -3,7 +3,7 @@
 	<script type="text/javascript" src="/opac/common/js/utils.js"></script>
 	<script type="text/javascript" src="/opac/common/js/CGI.js"></script>
 	<script type="text/javascript" src="/opac/common/js/md5.js"></script>
-	<script type="text/javascript" src="/opac/common/js/JSON.js"></script>
+	<script type="text/javascript" src="/opac/common/js/JSON_v1.js"></script>
 	<script type="text/javascript" src="/opac/common/js/fmall.js"></script>
 	<script type="text/javascript" src="/opac/common/js/fmgen.js"></script>
 	<script type="text/javascript" src="/opac/common/js/RemoteRequest.js"></script>
