--- a/Open-ILS/web/reports/oils_rpt_common.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_common.xhtml
@@ -2,7 +2,7 @@
 <script language='javascript' src='/opac/common/js//config.js'> </script> 
 <script language='javascript' src='/opac/common/js/CGI.js'> </script>
 <script language='javascript' src='/opac/common/js/Cookie.js'> </script>
-<script language='javascript' src='/opac/common/js/JSON.js'> </script>
+<script language='javascript' src='/opac/common/js/JSON_v1.js'> </script>
 <script language='javascript' src='/opac/common/js/fmall.js'> </script>
 <script language='javascript' src='/opac/common/js/fmgen.js'> </script>
 <script language='javascript' src='/opac/common/js/Cookies.js'> </script>
