--- a/Open-ILS/web/opac/extras/slimpac/start.html
+++ b/Open-ILS/web/opac/extras/slimpac/start.html
@@ -32,9 +32,30 @@
 				height: 20px;
 			}
 
+			.footer {
+				width: 100%;
+				text-align: center;
+				vertical-align: bottom;
+				margin: auto;
+				margin-top: 20px;
+			}
+
+			.footer_links {
+				width: 60%;
+				text-align: center;
+				padding: 10px;
+				font-size: 8pt;
+				margin: auto;
+			}
+
 			.footer_link {
 				margin-left: 10px; 
 				margin-right: 10px;
+			}
+
+			.copyright {
+				margin-top: 4px;
+				font-size: 7pt;
 			}
 
 			.indent0 {
@@ -49,6 +70,12 @@
 				padding-left: 20px; 
 			}
 
+			.search_field {
+				width: 100%;
+				text-align: center;
+				margin: auto;
+			}
+
 		</style>
 	</head>
 	<body>
@@ -60,15 +87,15 @@
 			<tbody>
 				<tr>
 					<td>
-						<div style='width: 100%; text-align: center'>
-							<img src='/opac/images/main_logo.jpg'/>
+						<div class='search_field'>
+							<img src='/opac/images/main_logo.jpg' alt=''/>
 						</div>
 					</td>
 				</tr>
 				<tr class="rowpad"><td></td></tr>
 				<tr class="bluerow">
 					<td>
-						<div style='width: 100%; text-align: center'>
+						<div class='search_field'>
 							<span>&slimpac.search.nowSearching;</span>
 							<select name="searchOrg">
 								<!--#include file="lib_list.inc" -->
@@ -79,7 +106,7 @@
 				<tr class="rowpad"><td></td></tr>
 				<tr class="greenrow">
 					<td>
-						<div style='width: 100%; text-align: center'>
+						<div class='search_field'>
 
 							<input type="text" name="searchTerms" size="40"/>
 
@@ -101,9 +128,9 @@
 
 		</form>
 
-		<div style='width: 100%; text-align:center; vertical-align: bottom; margin-top: 20px;'>
+		<div class="footer">
 			<center>
-			<div style='width: 60%; text-align:center; padding: 10px; font-size: 8pt;'>
+			<div class="footer_links">
 
 				<span class='footer_link'>
 					<a class='classic_link' href='/'>&slimpac.start.dynamic;</a>
@@ -139,7 +166,7 @@
 					<a target='' class='classic_link' id='eg_gal_link' href='&footer.union.url;'>&footer.union;</a>
 				</span>
 				<br/>
-				<div style='margin-top: 4px; font-size: 7pt;'>
+				<div class="copyright">
 					<span>&footer.copyright;</span>
 				</div>
 			</div>
