<style> tags must have a type attribute

--- a/Open-ILS/web/opac/extras/slimpac/advanced.html
+++ b/Open-ILS/web/opac/extras/slimpac/advanced.html
@@ -9,7 +9,7 @@
 <html>
 	<head>
 		<title>&opac.navigate.advanced;</title>
-		<style>
+		<style type="text/css">
 			.maintable {
 				border-collapse: collapse;
 				border: 3px solid #A7EA9D;
