change Build ID to Target Server ID to match reality, and display the svn path the build came from

--- a/Open-ILS/xul/staff_client/chrome/content/main/about.html
+++ b/Open-ILS/xul/staff_client/chrome/content/main/about.html
@@ -1,6 +1,7 @@
 <html><head><script></script></head><body onload="var x = document.getElementById('version'); var version ='/xul/server/'.split(/\//)[2]; if (version == 'server') { version = 'versionless debug build'; } x.appendChild(document.createTextNode(version));">
 <h1 style="text-decoration: underline">Evergreen</h1>
-<p>Build ID: <span id="version"></span></p>
+<p>Target Server ID: <span id="version"></span></p>
+<p>Repository Path: $HeadURL$</p>
 <h2>What is Evergreen?</h2>
 <blockquote>
 <p>
