--- a/Open-ILS/xul/staff_client/server/admin/cash_reports.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/cash_reports.xhtml
@@ -1,8 +1,15 @@
-<?xml version='1.0'?>
+<?xml version='1.0' encoding="UTF-8"?>
+
+<!DOCTYPE html PUBLIC 
+	"-//W3C//DTD XHTML 1.0 Transitional//EN" 
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd" [
+	<!--#include virtual="/opac/locale/${locale}/lang.dtd"-->
+]>
+
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude">
 
 	<head>
-		<title>Evergreen: Cash Reports</title>
+		<title>&staff.server.admin.cash.title;</title>
 		<script language='javascript' src='/opac/common/js/utils.js'> </script>
 		<script language='javascript' src='/opac/common/js//config.js'> </script>
 		<script language='javascript' src='/opac/common/js/CGI.js'> </script>
@@ -39,46 +46,46 @@
 	<body onload='crInit();'>
 
 		<div class='welcome_box'>
-			<span>Welcome </span><b><span id='user'/></b>
+			<span>&staff.server.admin.cash.welcome;</span><b><span id='user'/></b>
 		</div>
 
 		<center>
 
-			<span style='padding-left: 15px;'>Start Date:</span>
+			<span style='padding-left: 15px;'>&staff.server.admin.cash.start_date;</span>
 			<input type='text' id='cr_start' size='10' maxlength='10'> </input>
 			<button style='padding: 0px;' id='cr_start_trigger'>
 				<img src="/opac/common/js/jscalendar/img.gif" 
 					style="cursor: pointer; border: 1px solid red; padding: 0px; margin: -3px;" 
-					title="Date selector"
+					title="&staff.server.admin.cash.date.select;"
 					onmouseover="this.style.background='red';" 
 					onmouseout="this.style.background=''" />
 			</button>
 
-			<span style='padding-left: 15px;'>End Date:</span>
+			<span style='padding-left: 15px;'>&staff.server.admin.cash.end_date;</span>
 			<input type='text' id='cr_end' size='10' maxlength='10'> </input>
 			<button style='padding: 0px;' id='cr_end_trigger'>
 				<img src="/opac/common/js/jscalendar/img.gif" 
 					style="cursor: pointer; border: 1px solid red; padding: 0px; margin: -3px;" 
-					title="Date selector"
+					title="&staff.server.admin.cash.date.select;"
 					onmouseover="this.style.background='red';" 
 					onmouseout="this.style.background=''" />
 			</button>
 
-			<div class='pad' style='padding-left: 10px; font-size: 8pt;'>(YYYY-MM-DD)</div>
+			<div class='pad' style='padding-left: 10px; font-size: 8pt;'>&staff.server.admin.cash.date_format;</div>
 
-			<div>View reports for :  <select id='cr_orgs' style='width:auto;'/></div>
-			<div><button onclick='crDrawRange();'>Go!</button></div>
+			<div>&staff.server.admin.cash.view; <select id='cr_orgs' style='width:auto;'/></div>
+			<div><button onclick='crDrawRange();'>&staff.server.admin.cash.submit;</button></div>
 
 
 			<div id='cr_desk_payments_div'>
-				<h2>Desk Payments</h2>
+				<h2>&staff.server.admin.cash.desk;</h2>
 				<div id='cr_desk_payments'/>
 			</div>
 			
 			<br/><hr/><br/>
 
 			<div id='cr_user_payments_div'>
-				<h2>User Payments</h2>
+				<h2>&staff.server.admin.cash.user;</h2>
 				<div id='cr_user_payments'/>
 			</div>
 
