Correct "temaplate" typo

--- a/Open-ILS/xul/staff_client/server/admin/non_cat_types.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/non_cat_types.xhtml
@@ -100,7 +100,7 @@
 
 		<table class='hide_me'> <!-- repository for template rows -->
 			<tbody>
-				<tr id='nc_edit_row_temaplate' class='insert_row' edit='1'>
+				<tr id='nc_edit_row_template' class='insert_row' edit='1'>
 					<td align='center'>
 						<span class='padded'>
 							<input name='nc_edit_name' type='text'> </input>
